Prevent the "Stop using an invalid certificate" button from showing up on about:blank for OSX.

BUG=595512, 558581
TEST=Visit about:blank, click on the page icon several times, and make sure that the "Stop using an invalid certificate" never appears.

Review URL: https://codereview.chromium.org/1813623002

Cr-Commit-Position: refs/heads/master@{#382107}

Former-commit-id: 99889dad84e0e17e216336a1255173c70d6776bf